set heap size