@@ -16,6 +16,9 @@ RUN ./gradlew build || return 0
 FROM openjdk:8
 LABEL author="Ibrahim Bilge <Ibrahim.Bilge@opuscapita.com>"
 
+## setting heap size automatically to the container memory limits
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+
 ENV APP_HOME=/usr/app/
 WORKDIR $APP_HOME
 
@@ -25,4 +28,4 @@ HEALTHCHECK --interval=15s --timeout=3s --retries=15 \
   CMD curl --silent --fail http://localhost:3042/api/health/check || exit 1
 
 EXPOSE 3042
-ENTRYPOINT ["java","-jar","peppol-mlr-reporter.jar"]
+ENTRYPOINT exec java $JAVA_OPTS -jar peppol-mlr-reporter.jar
